# s25client

libs/: CMakeLists.txt
libs/rttrConfig/src/: files.h
libs/s25hosting/: CMakeLists.txt  commands.cpp  commands.h  s25hosting.cpp
libs/s25main/: Debug.cpp  Debug.h  GameManagerHosting.cpp  GameManagerHosting.h  GameManagerServer.cpp  GameManagerServer.h  HostedServerInfo.cpp  HostedServerInfo.h  Loader.cpp  Loader.h  QuickStartGame.cpp  QuickStartGame.h  QuickStartGameServer.cpp  QuickStartGameServer.h  SettingsHosting.cpp  SettingsHosting.h  SettingsServer.cpp  SettingsServer.h
libs/s25main/desktops/: dskLobby.cpp
libs/s25main/gameData/: ApplicationLoader.cpp  ApplicationLoader.h
libs/s25main/network/: CreateServerInfo.h  GameClient.cpp  GameClient.h  GameMessage.cpp  GameMessageInterface.h  GameMessage_GameCommand.cpp  GameMessages.h  GameProtocol.h  GameServer.cpp  GameServer.h
libs/s25server/: CMakeLists.txt  s25server.cpp
